--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ shareBtn.addEventListener("click", () => {
   lastShareTime = now;
   shares++;
   shareBtn.textContent = `Compartir ${shares}/3`;
-  window.open("😈Grupo Caliente🔥 https://t.me/Prohibi2Bot/Chat","_blank");
+  window.open("https://t.me/share/url?url=😈Grupo Caliente🔥 https://t.me/Prohibi2Bot/Chat","_blank");
   if(shares>=3){
     cover.style.display="none";
     chatContainer.style.display="flex";
