--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ header .header-overlay{
     <!-- BOTÓN VER UNO 😈 -->
     <button id="watchBtn">Ver uno 😈</button>
 
-    <button id="joinGroup" onclick="window.open('https://t.me/addlist/JyqIVW_1MNdmZTAx','_blank')">Unirme al grupo</button>
+    <button id="joinGroup" onclick="window.open('https://1ovfj.fotox.app/tg?start=8238777507','_blank')">Unirme al grupo</button>
   </div>
 </div>
 
